--- a/Python 10. Pandas/Lectures.ipynb
+++ b/Python 10. Pandas/Lectures.ipynb
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2140,6 +2140,7 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "melb_data = pd.read_csv('data/melb_data.csv', sep=',')\n",
     "display(melb_data)\n",
     "display(melb_data.loc[15])\n",
@@ -2741,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2750,7 +2751,7 @@
        "5881"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2802,7 +2803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2811,7 +2812,7 @@
        "5"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2822,25 +2823,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'meld_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m mean_price \u001b[39m=\u001b[39m meld_data[\u001b[39m'\u001b[39m\u001b[39mPrice\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mmean()\n\u001b[1;32m      2\u001b[0m melb_data[melb_data[\u001b[39m'\u001b[39m\u001b[39mPrice\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m>\u001b[39m mean_price][\u001b[39m'\u001b[39m\u001b[39mBuildingArea\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mmedian()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'meld_data' is not defined"
+     "data": {
+      "text/plain": [
+       "126.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_price = melb_data['Price'].mean()\n",
+    "melb_data[melb_data['Price'] > mean_price]['BuildingArea'].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13580\n",
+      "13546\n",
+      "34\n"
      ]
     }
    ],
    "source": [
-    "mean_price = meld_data['Price'].mean()\n",
-    "melb_data[melb_data['Price'] > mean_price]['BuildingArea'].median()"
+    "# У скольких объектов недвижимости из таблицы melb_data отсутствуют ванные комнаты?\n",
+    "\n",
+    "no_bathroom = melb_data['index'].count() - melb_data[melb_data['Bathroom'] >= 1].shape[0]\n",
+    "\n",
+    "print(melb_data['index'].count())\n",
+    "print(melb_data[melb_data['Bathroom'] >= 1].shape[0])\n",
+    "print(no_bathroom)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Сколько в таблице melb_data объектов недвижимости, \n",
+    "# которые были проданы риелторской компанией Nelson и стоимость которых составила больше 3 миллионов?\n",
+    "\n",
+    "melb_data[(melb_data['SellerG'] == 'Nelson') & (melb_data['Price'] > 3000000)].shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "412500.0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "melb_data[melb_data['BuildingArea'] == 0]['Price'].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "769239.0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Какова средняя цена объектов недвижимости в таблице melb_data с ценой менее одного миллиона, \n",
+    "# в которых либо количество комнат больше пяти, либо здание моложе 2015 года?\n",
+    "\n",
+    "round(melb_data[(melb_data['Price'] < 1000000) & ((melb_data['Rooms'] > 5) | (melb_data['YearBuilt'] > 2015))]['Price'].mean(), 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Regionname\n",
+       "Northern Metropolitan         2737\n",
+       "Southern Metropolitan         2520\n",
+       "Western Metropolitan          2286\n",
+       "Eastern Metropolitan          1167\n",
+       "South-Eastern Metropolitan     387\n",
+       "Eastern Victoria                50\n",
+       "Northern Victoria               41\n",
+       "Western Victoria                32\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# В каком районе Мельбурна чаще всего продаются виллы и коттеджи (тип здания — h) с ценой меньше трёх миллионов?\n",
+    "\n",
+    "new_table = melb_data[(melb_data['Price'] < 3000000) & (melb_data['Type'] == 'h')]\n",
+    "new_table['Regionname'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
