--- a/Python 11. Pandas/lectures_pyhton11.ipynb
+++ b/Python 11. Pandas/lectures_pyhton11.ipynb
@@ -16175,6 +16175,260 @@
     "\n",
     "print(test_series_1.apply(get_experience))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Категории в данных**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column_Name</th>\n",
+       "      <th>Num_Unique</th>\n",
+       "      <th>Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>2</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Type</td>\n",
+       "      <td>3</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>WeekdaySale</td>\n",
+       "      <td>5</td>\n",
+       "      <td>int32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Method</td>\n",
+       "      <td>5</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Regionname</td>\n",
+       "      <td>8</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Rooms</td>\n",
+       "      <td>9</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Bathroom</td>\n",
+       "      <td>9</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>StreetType</td>\n",
+       "      <td>11</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Car</td>\n",
+       "      <td>11</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Bedroom</td>\n",
+       "      <td>12</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>MonthSale</td>\n",
+       "      <td>12</td>\n",
+       "      <td>int32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>CouncilArea</td>\n",
+       "      <td>33</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Date</td>\n",
+       "      <td>58</td>\n",
+       "      <td>datetime64[ns]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>AgeBuilding</td>\n",
+       "      <td>152</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Postcode</td>\n",
+       "      <td>198</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Distance</td>\n",
+       "      <td>202</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>SellerG</td>\n",
+       "      <td>268</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Propertycount</td>\n",
+       "      <td>311</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Suburb</td>\n",
+       "      <td>314</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>BuildingArea</td>\n",
+       "      <td>602</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Landsize</td>\n",
+       "      <td>1448</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Price</td>\n",
+       "      <td>2204</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Lattitude</td>\n",
+       "      <td>6503</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Longtitude</td>\n",
+       "      <td>7063</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Coordinates</td>\n",
+       "      <td>13097</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>index</td>\n",
+       "      <td>13580</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Column_Name  Num_Unique            Type\n",
+       "0         Weekend           2           int64\n",
+       "1            Type           3          object\n",
+       "2     WeekdaySale           5           int32\n",
+       "3          Method           5          object\n",
+       "4      Regionname           8          object\n",
+       "5           Rooms           9           int64\n",
+       "6        Bathroom           9           int64\n",
+       "7      StreetType          11          object\n",
+       "8             Car          11           int64\n",
+       "9         Bedroom          12           int64\n",
+       "10      MonthSale          12           int32\n",
+       "11    CouncilArea          33          object\n",
+       "12           Date          58  datetime64[ns]\n",
+       "13    AgeBuilding         152           int64\n",
+       "14       Postcode         198           int64\n",
+       "15       Distance         202         float64\n",
+       "16        SellerG         268          object\n",
+       "17  Propertycount         311           int64\n",
+       "18         Suburb         314          object\n",
+       "19   BuildingArea         602         float64\n",
+       "20       Landsize        1448         float64\n",
+       "21          Price        2204         float64\n",
+       "22      Lattitude        6503         float64\n",
+       "23     Longtitude        7063         float64\n",
+       "24    Coordinates       13097          object\n",
+       "25          index       13580           int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "unique_list = []\n",
+    "for col in melb_df3.columns:\n",
+    "    # создаём кортеж (имя столбца, число уникальных значений)\n",
+    "    item = (col, melb_df3[col].nunique(), melb_df3[col].dtypes)\n",
+    "    # добавляем кортеж в список\n",
+    "    unique_list.append(item)\n",
+    "unique_counts = pd.DataFrame(unique_list, columns=[\"Column_Name\", \"Num_Unique\", \"Type\"]).sort_values(by=\"Num_Unique\", ignore_index=True)\n",
+    "# ignore_index=True дает новый порядок по индексам, вне зависимости по какому порядку стоят названия колонок в таблице \n",
+    "\n",
+    "display(unique_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
