--- a/Python 11. Pandas/lectures_pyhton11.ipynb
+++ b/Python 11. Pandas/lectures_pyhton11.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -16425,10 +16425,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 13580 entries, 0 to 13579\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   index          13580 non-null  int64         \n",
+      " 1   Suburb         13580 non-null  object        \n",
+      " 2   Address        13580 non-null  object        \n",
+      " 3   Rooms          13580 non-null  int64         \n",
+      " 4   Type           13580 non-null  object        \n",
+      " 5   Price          13580 non-null  float64       \n",
+      " 6   Method         13580 non-null  object        \n",
+      " 7   SellerG        13580 non-null  object        \n",
+      " 8   Date           13580 non-null  datetime64[ns]\n",
+      " 9   Distance       13580 non-null  float64       \n",
+      " 10  Postcode       13580 non-null  int64         \n",
+      " 11  Bedroom        13580 non-null  int64         \n",
+      " 12  Bathroom       13580 non-null  int64         \n",
+      " 13  Car            13580 non-null  int64         \n",
+      " 14  Landsize       13580 non-null  float64       \n",
+      " 15  BuildingArea   13580 non-null  float64       \n",
+      " 16  YearBuilt      13580 non-null  int64         \n",
+      " 17  CouncilArea    12211 non-null  object        \n",
+      " 18  Lattitude      13580 non-null  float64       \n",
+      " 19  Longtitude     13580 non-null  float64       \n",
+      " 20  Regionname     13580 non-null  object        \n",
+      " 21  Propertycount  13580 non-null  int64         \n",
+      " 22  Coordinates    13580 non-null  object        \n",
+      "dtypes: datetime64[ns](1), float64(6), int64(8), object(8)\n",
+      "memory usage: 2.4+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(melb_df3.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 13580 entries, 0 to 13579\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   index          13580 non-null  int64         \n",
+      " 1   Suburb         13580 non-null  object        \n",
+      " 2   Address        13580 non-null  object        \n",
+      " 3   Rooms          13580 non-null  int64         \n",
+      " 4   Type           13580 non-null  category      \n",
+      " 5   Price          13580 non-null  float64       \n",
+      " 6   Method         13580 non-null  category      \n",
+      " 7   SellerG        13580 non-null  object        \n",
+      " 8   Date           13580 non-null  datetime64[ns]\n",
+      " 9   Distance       13580 non-null  float64       \n",
+      " 10  Postcode       13580 non-null  int64         \n",
+      " 11  Bedroom        13580 non-null  int64         \n",
+      " 12  Bathroom       13580 non-null  int64         \n",
+      " 13  Car            13580 non-null  int64         \n",
+      " 14  Landsize       13580 non-null  float64       \n",
+      " 15  BuildingArea   13580 non-null  float64       \n",
+      " 16  YearBuilt      13580 non-null  category      \n",
+      " 17  CouncilArea    12211 non-null  category      \n",
+      " 18  Lattitude      13580 non-null  float64       \n",
+      " 19  Longtitude     13580 non-null  float64       \n",
+      " 20  Regionname     13580 non-null  category      \n",
+      " 21  Propertycount  13580 non-null  int64         \n",
+      " 22  Coordinates    13580 non-null  object        \n",
+      "dtypes: category(5), datetime64[ns](1), float64(6), int64(7), object(4)\n",
+      "memory usage: 1.9+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Сделаем преобразование столбцов к типу данных category:\n",
+    "\n",
+    "# список столбцов, которые мы не берём во внимание\n",
+    "cols_to_exclude = [\"Date\", \"Rooms\", \"Bedroom\", \"Bathroom\", \"Car\"]\n",
+    "max_unigue_count = 150 # задаём максимальное число уникальных категорий\n",
+    "\n",
+    "for col in melb_df3.columns:\n",
+    "    if melb_df3[col].nunique() < max_unigue_count and col not in cols_to_exclude:\n",
+    "        melb_df3[col] = melb_df3[col].astype(\"category\")\n",
+    "        \n",
+    "display(melb_df3.info())\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
